completed clear chat

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nozbe/with-observables": "^1.6.0",
     "@privacyresearch/libsignal-protocol-typescript": "^0.0.16",
     "@reduxjs/toolkit": "^2.7.0",
+    "@types/lodash": "^4.17.16",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
